corrected fb share button alignment

--- a/src/css/post.less
+++ b/src/css/post.less
@@ -38,3 +38,11 @@
     text-transform: uppercase;
   }
 }
+
+.facebook-social-media{
+  .fb-share-button{
+    span:first-child{
+      height: 26px;
+    }
+  }
+}
